--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
-name = "nfd-bot"
+name = "nfd"
 main = "worker.js"
 compatibility_date = "2025-11-12"
 
-# 环境变量（通过 GitHub Secrets 注入）
+# 环境变量通过 GitHub Secrets 注入
 [vars]
-ENV_BOT_TOKEN = ""
-ENV_BOT_SECRET = ""
-ENV_ADMIN_UID = ""
+ENV_BOT_TOKEN = "${BOT_TOKEN}"
+ENV_BOT_SECRET = "${BOT_SECRET}"
+ENV_ADMIN_UID = "${ADMIN_UID}"
 
-# KV 命名空间（必须先在 Cloudflare 创建）
+# KV 命名空间绑定
 [[kv_namespaces]]
 binding = "nfd"
-id = "6abe78e21a124170ac75236b27b4d76f"
+id = "${KV_NAMESPACE_ID}"
